<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jam2App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="status">"Note: "</string>
    <string name="new_game">New</string>
    <string name="retry">Retry</string>
    <string name="btn0">1</string>
    <string name="btn1">2</string>
    <string name="btn2">3</string>
    <string name="btn3">4</string>
    <string name="btn4">5</string>
    <string name="btn5">6</string>
    <string name="btn6">7</string>
    <string name="btn7">1</string>
    <string name="status2">0/0</string>
</resources>
